# labelscope

./: .gitignore  LICENSE  README.md  contexto.md  pyproject.toml
.atl/: skill-registry.md
.github/workflows/: ci.yml  publish.yml
docs/: RELEASING.md  epl2-reference.md
examples/: epl1-55x34.txt  epl2-55x34.txt  epl3-55x34.txt  epl4-55x44.txt  epl5-38x25.txt  epl6-38x25.txt  epl7-38x25.txt
labelscope/: __init__.py  cli.py
labelscope/core/: __init__.py  barcodes.py  canvas.py  errors.py  fonts.py  geometry.py
labelscope/epl2/: __init__.py  commands.py  parser.py  renderer.py
tests/: README.md  conftest.py  test_cli.py  test_v1_code128_subset_b.py  test_v2_image_regression.py
tests/core/: test_barcodes.py  test_canvas.py  test_errors.py  test_fonts.py  test_geometry.py
tests/epl2/: test_commands.py  test_determinism_process.py  test_parser_all_fixtures.py  test_parser_decoding.py  test_parser_errors.py  test_parser_quoted_strings.py  test_parser_tokenizer.py  test_renderer_A_alignment.py  test_renderer_A_basic.py  test_renderer_A_font5_uppercase.py  test_renderer_A_multipliers.py  test_renderer_A_reverse.py  test_renderer_A_reverse_rotated.py  test_renderer_A_rotation.py  test_renderer_B_1d.py  test_renderer_B_ean13_synthetic.py  test_renderer_B_explicit_rotation.py  test_renderer_B_hri.py  test_renderer_B_upca_synthetic.py  test_renderer_D_S_no_visual_effect.py  test_renderer_R_after_q.py  test_renderer_R_nonzero.py  test_renderer_ZB.py  test_renderer_all_fixtures.py  test_renderer_b_qr.py  test_renderer_determinism.py  test_renderer_dispatch.py  test_rotation_anchor_unit.py  test_snapshots.py
